--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "angularfire2": "^5.4.2",
     "firebase": "^7.24.0",
     "primeicons": "^5.0.0",
+    "primeng": "^12.2.1",
     "rxjs": "~6.6.0",
+    "subsink": "^1.0.2",
     "sweetalert2": "^11.4.4",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
